--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,6 @@
-#image{
-   max-width: 100%;
-   height: 100%; 
-   margin: auto;
+#image {
+	display: block;
+	max-width: 100%;
+	height: auto;
+	margin: auto;
 }
